--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,17 @@
-upstream instaswap {
-    server instaswap:8000;
-}
-
+# to be refactored when I create a load balancer
 server {
-
-    listen 80;
-
+    root /var/www/html;
+    listen 8000 ;
+    listen [::]:8000 ;
+    server_name _;
+    index index.html;
     location / {
-        proxy_pass http://instaswap;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /staticfiles/ {
-        alias /home/app/instaswap/staticfiles/;
-    }
-
+        proxy_pass http://127.0.0.1:8020/;
+        }
+    location /static/ {
+        alias /var/www/html/static/;
+     }
 }
