--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,21 @@
 # to be refactored when I create a load balancer
+upstream instaswap {
+    server instaswap:8020;
+}
+
 server {
     root /var/www/html;
     listen 8000 ;
     listen [::]:8000 ;
-    server_name _;
+    server_name localhost;
     index index.html;
     location / {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://127.0.0.1:8020/;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_pass http://instaswap;
         }
     location /static/ {
         alias /var/www/html/static/;
