--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,8 +10,8 @@ server {
     server_name localhost;
     index index.html;
     location / {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
+        # proxy_set_header X-Forwarded-Host $host;
+        # proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
