--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,7 +7,7 @@ RUN apt-get update -y && apt-get install -y nginx
 
 COPY ./nginx/nginx.conf /etc/nginx/conf.d
 
-# CMD service nginx start
+RUN service nginx start
 
 # install netcat used in entry script
 # RUN apt-get update && apt-get install -yyq netcat
