--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,8 @@
 server {
     root /var/www/html;
     server_name localhost;
-    listen $PORT ;
-    listen [::]:$PORT ;
+    listen       $PORT;
+    # listen [::]:$PORT ;
     index index.html;
     location / {
         proxy_set_header X-Forwarded-Host $host;
