--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 # to be refactored when I create a load balancer
 server {
     root /var/www/html;
+    listen 8000 ;
+    listen [::]:8000 ;
     server_name localhost;
-    listen       $PORT;
-    # listen [::]:$PORT ;
     index index.html;
     location / {
         proxy_set_header X-Forwarded-Host $host;
