collect static in a app folder

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 # to be refactored when I create a load balancer
 server {
-    root /var/www/html;
+    # root /var/www/html;
     listen 8000 ;
     listen [::]:8000 ;
     server_name localhost;
@@ -12,6 +12,6 @@ server {
         proxy_pass http://127.0.0.1:8020/;
         }
     location /static/ {
-        alias /var/www/html/static/;
+        alias /home/app/instaswap/frontend/static/;
      }
 }
